{
  "version": 4,
  "terraform_version": "1.13.3",
  "serial": 31,
  "lineage": "c63ac771-4fef-e47a-1bdf-2c5d3da42388",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "app_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0bb1986d42f3ea965",
            "arn": "arn:aws:ec2:us-east-2:907489583701:instance/i-052653ffa9725a7cd",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-052653ffa9725a7cd",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "m7i-flex.large",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0137364cd630a4c7c",
            "private_dns": "ip-10-0-1-174.us-east-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.174",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0bf99282ccef0fd1c",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-06a9d093e4a3bdfc5",
            "tags": {
              "Name": "aws-rm-terraform"
            },
            "tags_all": {
              "Name": "aws-rm-terraform"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-079d5c06c9bc63905"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_ami.ubuntu",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:907489583701:network-acl/acl-0f703bfe6c997cec5",
            "default_network_acl_id": "acl-0f703bfe6c997cec5",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-0f703bfe6c997cec5",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "907489583701",
            "subnet_ids": [
              "subnet-06a9d093e4a3bdfc5",
              "subnet-073b77329a03c4449",
              "subnet-0f98e813a02503da5"
            ],
            "tags": {
              "Name": "aws-rm-vpc-default"
            },
            "tags_all": {
              "Name": "aws-rm-vpc-default"
            },
            "vpc_id": "vpc-080dc25e16a24253f"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:907489583701:route-table/rtb-06178a6b0a4d6a310",
            "default_route_table_id": "rtb-06178a6b0a4d6a310",
            "id": "rtb-06178a6b0a4d6a310",
            "owner_id": "907489583701",
            "propagating_vgws": null,
            "route": [],
            "tags": {
              "Name": "aws-rm-vpc-default"
            },
            "tags_all": {
              "Name": "aws-rm-vpc-default"
            },
            "timeouts": {
              "create": "5m",
              "update": "5m"
            },
            "vpc_id": "vpc-080dc25e16a24253f"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:907489583701:security-group/sg-079d5c06c9bc63905",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-079d5c06c9bc63905",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "907489583701",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "aws-rm-vpc-default"
            },
            "tags_all": {
              "Name": "aws-rm-vpc-default"
            },
            "vpc_id": "vpc-080dc25e16a24253f"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:907489583701:internet-gateway/igw-08c1998f649c83b3b",
            "id": "igw-08c1998f649c83b3b",
            "owner_id": "907489583701",
            "tags": {
              "Name": "aws-rm-vpc"
            },
            "tags_all": {
              "Name": "aws-rm-vpc"
            },
            "vpc_id": "vpc-080dc25e16a24253f"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-08c1998f649c83b3b",
            "id": "r-rtb-0c6fe1ae37dd6669f1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0c6fe1ae37dd6669f",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:907489583701:route-table/rtb-03a5812661176be79",
            "id": "rtb-03a5812661176be79",
            "owner_id": "907489583701",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "aws-rm-vpc-private-us-east-2a"
            },
            "tags_all": {
              "Name": "aws-rm-vpc-private-us-east-2a"
            },
            "timeouts": null,
            "vpc_id": "vpc-080dc25e16a24253f"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:907489583701:route-table/rtb-06dbe6e46186b3a09",
            "id": "rtb-06dbe6e46186b3a09",
            "owner_id": "907489583701",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "aws-rm-vpc-private-us-east-2b"
            },
            "tags_all": {
              "Name": "aws-rm-vpc-private-us-east-2b"
            },
            "timeouts": null,
            "vpc_id": "vpc-080dc25e16a24253f"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:907489583701:route-table/rtb-0c6fe1ae37dd6669f",
            "id": "rtb-0c6fe1ae37dd6669f",
            "owner_id": "907489583701",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "aws-rm-vpc-public"
            },
            "tags_all": {
              "Name": "aws-rm-vpc-public"
            },
            "timeouts": null,
            "vpc_id": "vpc-080dc25e16a24253f"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05af8f7e9f390f1a3",
            "route_table_id": "rtb-03a5812661176be79",
            "subnet_id": "subnet-06a9d093e4a3bdfc5"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09f8fef617f5c697b",
            "route_table_id": "rtb-06dbe6e46186b3a09",
            "subnet_id": "subnet-073b77329a03c4449"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03fdeb9c6f57a876a",
            "route_table_id": "rtb-0c6fe1ae37dd6669f",
            "subnet_id": "subnet-0f98e813a02503da5"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:907489583701:subnet/subnet-06a9d093e4a3bdfc5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06a9d093e4a3bdfc5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "907489583701",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "aws-rm-vpc-private-us-east-2a"
            },
            "tags_all": {
              "Name": "aws-rm-vpc-private-us-east-2a"
            },
            "vpc_id": "vpc-080dc25e16a24253f"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:907489583701:subnet/subnet-073b77329a03c4449",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-073b77329a03c4449",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "907489583701",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "aws-rm-vpc-private-us-east-2b"
            },
            "tags_all": {
              "Name": "aws-rm-vpc-private-us-east-2b"
            },
            "vpc_id": "vpc-080dc25e16a24253f"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:907489583701:subnet/subnet-0f98e813a02503da5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.101.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f98e813a02503da5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "907489583701",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "aws-rm-vpc-public-us-east-2a"
            },
            "tags_all": {
              "Name": "aws-rm-vpc-public-us-east-2a"
            },
            "vpc_id": "vpc-080dc25e16a24253f"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:907489583701:vpc/vpc-080dc25e16a24253f",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0f703bfe6c997cec5",
            "default_route_table_id": "rtb-06178a6b0a4d6a310",
            "default_security_group_id": "sg-079d5c06c9bc63905",
            "dhcp_options_id": "dopt-08d1f0fbb5197f2ef",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-080dc25e16a24253f",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-06178a6b0a4d6a310",
            "owner_id": "907489583701",
            "tags": {
              "Name": "aws-rm-vpc"
            },
            "tags_all": {
              "Name": "aws-rm-vpc"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}